# haxball

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPT_MELHORIA.md  README.es.md  README.md  README.pt.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_room.py  extended_room.py  native_room.py
haxball/: __init__.py  _bridge.py  _hbinit.py  browser.py  client.py  command.py  config.py  disc.py  enums.py  errors.py  extended.py  logger.py  models.py  module.py  player.py  player_list.py  room.py  room_native.py  utils.py
haxball/engine/: __init__.py  polyfills.py
haxball_py/: __init__.py  _bridge.py  _hbinit.py  _native.py  _native_engine.py  browser.py  client.py  command.py  config.py  disc.py  enums.py  errors.py  event_emitter.py  events.py  extended.py  logger.py  models.py  module.py  player.py  player_list.py  room.py  room_native.py  utils.py
haxball_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
haxball_py/engine/: headless_min.py  polyfills.py
haxball_py/scripts/: update_engine.py
tests/: conftest.py  test_extended.py  test_native_engine.py
