[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haxball-python"
version = "0.1.2"
description = "Python bridge for the HaxBall Headless Host API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["haxball", "headless", "playwright", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "playwright>=1.50.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["haxball*"]

[project.urls]
Homepage = "https://github.com/Fusionzx/haxball-python"
Repository = "https://github.com/Fusionzx/haxball-python"
Issues = "https://github.com/Fusionzx/haxball-python/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (e.g. room creation with real Haxball server)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
